C4-Fix build jsweet